--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">WikiGeoInfo</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="app_name">Wikify</string>
+    <string name="title_activity_main">Wikify</string>
     <string name="gpsoffsnack">GPS is turned off</string>
     <string name="gpsison">Finding your location</string>
     <string name="settingsgps">Settings</string>
