--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -4,4 +4,5 @@
     <string name="gpsoffsnack">GPS is turned off</string>
     <string name="gpsison">Finding your location</string>
     <string name="settingsgps">Settings</string>
+    <string name="checkinternetconnection">Please check your internet connection.</string>
 </resources>
