--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -10,4 +10,5 @@
     <string name="invitation_message">Go and check out Wikify. The brand new app to explore Wikipedia.</string>
     <string name="invitation_cta">Invite</string>
     <string name="flytotitle">Choose a destination</string>
+    <string name="settings">Settings</string>
 </resources>
