--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -11,4 +11,5 @@
     <string name="invitation_cta">Invite</string>
     <string name="flytotitle">Choose a destination</string>
     <string name="settings">Settings</string>
+    <string name="savedpois">Saved POI</string>
 </resources>
