--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="title_activity_settings">Settings</string>
     <string name="settings">Settings</string>
     <string name="title_activity_saved_poi">Saved POI</string>
+    <string name="savedpois">Saved POI</string>
 </resources>
