--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -12,4 +12,5 @@
     <string name="flytotitle">Choose a destination</string>
     <string name="settings">Settings</string>
     <string name="savedpois">Saved POI</string>
+    <string name="favorite">Favorites</string>
 </resources>
