--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="settings">Settings</string>
     <string name="title_activity_saved_poi">Saved POI</string>
     <string name="savedpois">Saved POI</string>
+    <string name="favorite">Favorites</string>
 </resources>
