--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="title_activity_saved_poi">Saved POI</string>
     <string name="savedpois">Saved POI</string>
     <string name="favorite">Favorites</string>
+    <string name="shareto">Share article to...</string>
+    <string name="addedfavs">Article has been added to your favourites.</string>
+    <string name="removedfavs">Article has been removed from your favourites.</string>
 </resources>
