--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -10,7 +10,9 @@
     <string name="invitation_message">Go and check out Wikify. The brand new app to explore Wikipedia.</string>
     <string name="invitation_cta">Invite</string>
     <string name="flytotitle">Choose a destination</string>
+    <string name="title_activity_settings">Settings</string>
     <string name="settings">Settings</string>
+    <string name="title_activity_saved_poi">Saved POI</string>
     <string name="savedpois">Saved POI</string>
     <string name="favorite">Favorites</string>
     <string name="shareto">Share article to...</string>
