--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -1,21 +1,19 @@
 <resources>
     <string name="app_name">Wikify</string>
     <string name="title_activity_main">Wikify</string>
-    <string name="gpsoffsnack">GPS is turned off</string>
-    <string name="gpsison">Finding your location</string>
-    <string name="settingsgps">Settings</string>
-    <string name="checkinternetconnection">Please check your internet connection.</string>
-    <string name="invite_people">Invite people</string>
-    <string name="invitation_title">Wikify Invitation</string>
-    <string name="invitation_message">Go and check out Wikify. The brand new app to explore Wikipedia.</string>
-    <string name="invitation_cta">Invite</string>
-    <string name="flytotitle">Choose a destination</string>
-    <string name="title_activity_settings">Settings</string>
-    <string name="settings">Settings</string>
-    <string name="title_activity_saved_poi">Saved POI</string>
-    <string name="savedpois">Saved POI</string>
-    <string name="favorite">Favorites</string>
-    <string name="shareto">Share article to...</string>
-    <string name="addedfavs">Article has been added to your favourites.</string>
-    <string name="removedfavs">Article has been removed from your favourites.</string>
+    <string name="gpsoffsnack">GPS е изключен</string>
+    <string name="gpsison">Намиране на местоположението ви</string>
+    <string name="settingsgps">Настройки</string>
+    <string name="checkinternetconnection">Моля, проверете вашата интернет връзка.</string>
+    <string name="invite_people">Поканете хора</string>
+    <string name="invitation_title">Wikify покана</string>
+    <string name="invitation_message">Go and check out Wikify. Това чисто ново приложение за използване на Уикипедия.</string>
+    <string name="invitation_cta">пoкани</string>
+    <string name="flytotitle">Изберете дестинация</string>
+    <string name="settings">Настройки</string>
+    <string name="savedpois">Запазени POI</string>
+    <string name="favorite">Любими</string>
+    <string name="shareto">Споделете статия...</string>
+    <string name="addedfavs">Статията е добавен към любимите ви.</string>
+    <string name="removedfavs">Статията е премахната от любимите ви.</string>
 </resources>
